--- a/templates/lista_pacientes.html
+++ b/templates/lista_pacientes.html
@@ -1,8 +1,15 @@
-<link rel="stylesheet" href="../static/base.css">
+{% extends 'base.html' %}
+{% load static %}
+
+{% block css %}
+    <link rel="stylesheet" href="{% static 'css/pacientes.css' %}">
+{% endblock %}
+
+{% block contenido %}
 <h2>Pacientes</h2>
-<link rel="stylesheet" href="../static/pacientes.css">  
+
 <div class="card-custom">
-    <a class="btn btn-success">Registrar Paciente</a>
+    <a href="{% url 'crear_paciente' %}" class="btn btn-success">Registrar Paciente</a>
 </div>
 
 <div class="table-custom">
@@ -20,20 +27,26 @@
     </thead>
 
     <tbody>
+        {% for paciente in pacientes %}
         <tr>
-            <td>1</td>
-            <td><img src="persona.jpg" class="imagen-lista"></td>
-            <td>María López</td>
-            <td>17.234.555-3</td>
-            <td>2000-03-22</td>
-            <td>F</td>
+            <td>{{ paciente.id }}</td>
             <td>
-                <button class="btn btn-warning">Editar</button>
-                <button class="btn btn-danger">Eliminar</button>
+                <img src="{% static 'img/persona.jpg' %}" class="imagen-lista" alt="Foto" onerror="this.style.display='none'">
+            </td>
+            <td>{{ paciente.nombre_completo }}</td>
+            <td>{{ paciente.rut }}</td>
+            <td>{{ paciente.fecha_nacimiento|date:"d/m/Y" }}</td>
+            <td>{{ paciente.get_sexo_display }}</td> <td>
+                <a href="{% url 'editar_paciente' paciente.id %}" class="btn btn-warning">Editar</a>
+                <a href="{% url 'eliminar_paciente' paciente.id %}" class="btn btn-danger" onclick="return confirm('¿Estás seguro de eliminar a este paciente?');">Eliminar</a>
             </td>
         </tr>
+        {% empty %}
+        <tr>
+            <td colspan="7" style="text-align:center;">No hay pacientes registrados.</td>
+        </tr>
+        {% endfor %}
     </tbody>
 </table>
 </div>
-
-
+{% endblock %}
